[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["SomeTh1n6 <fregatmecht@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.112.1"
pydantic = "2.8.2"
pytest = "8.3.2"
sqlalchemy = "2.0.32"
uvicorn = "0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
